# ARC-ODOO

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: test.yml
addons/ai_trading_assistant/: __manifest__.py
addons/ai_trading_assistant/controllers/: __init__.py
addons/ai_trading_assistant/data/: ssi_api_config.xml
addons/ai_trading_assistant/models/: __init__.py  ai_chatbot_service.py  ai_strategy.py  ai_training_history.py  ssi_config.py  ssi_data_fetcher.py  stock_candle.py  stock_ticker.py
addons/ai_trading_assistant/scripts/: cli_trainer.py
addons/ai_trading_assistant/security/: ir.model.access.csv
addons/ai_trading_assistant/views/: ai_strategy_views.xml  ai_training_history_views.xml  ssi_config_views.xml  ssi_data_fetcher_views.xml  stock_ticker_views.xml
addons/arc_core/: __manifest__.py
addons/fund_management/: __manifest__.py
addons/fund_management_control/: __manifest__.py
addons/nav_management/: __manifest__.py
addons/report_list/: __manifest__.py
etc/: requirements.txt
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_fm_constants.py  test_fm_contract_utils.py  test_fm_fee_utils.py  test_fm_investment_utils.py  test_fm_mround.py  test_fm_timezone_utils.py  test_integration_controllers.py  test_manifest_audit.py  test_nav_date_utils.py  test_om_constants.py  test_om_validators.py
tests/odoo_tests/: __init__.py  test_fund_model.py  test_matching_engine.py  test_nav_model.py  test_payos_service.py  test_transaction_model.py
(+132 files in other folders)
